# esp-shutdown-predict

./: .gitignore  README.md  README.ru.md  analyzer.ipynb  pyproject.toml
examples/: control_plan_q_liq_windows_1000.json  control_plan_q_liq_windows_demo_2h.json  control_plan_rules_shutdown.json  control_plan_shutdown.json  control_plan_well_freq_stepup_2h.json  control_plan_well_multifactor_compensation_2h.json  control_plan_well_productivity_decline_2h.json  control_plan_well_pwh_growth_2h.json  control_plan_well_qtest_demo_2h.json
examples/fleet_archetypes/: well_esp_archetypes_v1.json
examples/scenario_library/: catalog.json  well_esp_inflow_deterioration_medium_2h.json  well_esp_inflow_deterioration_mild_2h.json  well_esp_inflow_deterioration_severe_2h.json  well_esp_stable_normal_2h.json  well_esp_viscosity_growth_medium_2h.json  well_esp_viscosity_growth_mild_2h.json  well_esp_viscosity_growth_severe_2h.json  well_esp_voltage_sag_medium_2h.json  well_esp_voltage_sag_mild_2h.json  well_esp_voltage_sag_severe_2h.json  well_esp_watercut_growth_medium_2h.json  well_esp_watercut_growth_mild_2h.json  well_esp_watercut_growth_severe_2h.json  well_esp_wellhead_backpressure_medium_2h.json  (+2 more)
src/: wrapper.py
src/ufpy_esp_synth/: plot_windows.py
tests/: helpers.py  test_control_plan.py  test_demo_windows.py  test_determinism.py  test_esp_system_free_gas.py  test_fleet.py  test_generation_variants.py  test_models.py  test_no_random.py  test_parallel.py  test_plot_windows.py  test_schema.py  test_shutdown_variants.py  test_telemetry_schema.py  test_well_esp_system.py
(+18 files in other folders)
